--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title">BASIC PROGRAMMING</h3>
                                     <span class="education__studies">UPB (University)</span>
-                                    <span class="education__year">06-2021 - 12/2021</span>
+                                    <span class="education__year">06/2021 - 12/2021</span>
                                 </div>
                             </div>
 
@@ -181,7 +181,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title">SOFTARE DEVELOPMENT TECHNICIAN</h3>
                                     <span class="education__studies">SENA</span>
-                                    <span class="education__year">05-2019 - 05-2021</span>
+                                    <span class="education__year">05/2019 - 05/2021</span>
                                 </div>
                             </div>
                             
